--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,56 +8,56 @@
             A108 Adam Street <br />
             New York, NY 535022<br />
             United States <br /><br />
-            <strong>Phone:</strong> +1 5589 55488 55<br />
-            <strong>Email:</strong> info@example.com<br />
+            <strong>{{'mobilePhone' | translate}}</strong> +1 5589 55488 55<br />
+            <strong>{{'Email' | translate}}</strong> info@example.com<br />
           </p>
         </div>
 
         <div class="col-lg-2 col-md-6 footer-links">
-          <h4>Useful Links</h4>
+          <h4>{{'UsefulLinks' | translate}}</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">{{'Home' | translate}}</a></li>
             <li>
-              <i class="bi bi-chevron-right"></i> <a href="#">About us</a>
+              <i class="bi bi-chevron-right"></i> <a href="#">{{'Aboutus' | translate}}</a>
             </li>
             <li>
-              <i class="bi bi-chevron-right"></i> <a href="#">Services</a>
+              <i class="bi bi-chevron-right"></i> <a href="#">{{'Services' | translate}}</a>
             </li>
             <li>
               <i class="bi bi-chevron-right"></i>
-              <a href="#">Terms of service</a>
+              <a href="#">{{'Termsofservice' | translate}}</a>
             </li>
             <li>
-              <i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a>
+              <i class="bi bi-chevron-right"></i> <a href="#">{{'Privacypolicy' | translate}}</a>
             </li>
           </ul>
         </div>
 
         <div class="col-lg-3 col-md-6 footer-links">
-          <h4>Our Services</h4>
+          <h4>{{'Services' | translate}}</h4>
           <ul>
             <li>
-              <i class="bi bi-chevron-right"></i> <a href="#">Web Design</a>
+              <i class="bi bi-chevron-right"></i> <a href="#">{{'WebDesign' | translate}}</a>
             </li>
             <li>
               <i class="bi bi-chevron-right"></i>
-              <a href="#">Web Development</a>
+              <a href="#">{{'WebDevelopment' | translate}}</a>
             </li>
             <li>
               <i class="bi bi-chevron-right"></i>
-              <a href="#">Product Management</a>
+              <a href="#">{{'ProductManagement' | translate}}</a>
             </li>
             <li>
-              <i class="bi bi-chevron-right"></i> <a href="#">Marketing</a>
+              <i class="bi bi-chevron-right"></i> <a href="#">{{'Marketing' | translate}}</a>
             </li>
             <li>
-              <i class="bi bi-chevron-right"></i> <a href="#">Graphic Design</a>
+              <i class="bi bi-chevron-right"></i> <a href="#">{{'GraphicDesign' | translate}}</a>
             </li>
           </ul>
         </div>
 
         <div class="col-lg-4 col-md-6 footer-newsletter">
-          <h4>Join Our Newsletter</h4>
+          <h4>{{'JoinOurNewsletter' | translate}}</h4>
           <p>
             Tamen quem nulla quae legam multos aute sint culpa legam noster
             magna
