--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -3,7 +3,7 @@
 
       <div class="section-title">
         <h2>{{'Gallery' | translate}}</h2>
-        <p>{{'With our state-of-the-art facilities, advanced technology, and expert medical professionals we provide top-quality care to our patients, our clinics are comfortable and safe space for all our patients. Explore our gallery and discover the world-class care we offer at our clinics.' | translate}}</p>
+        <p>{{'g1' | translate}}</p>
       </div>
     </div>
 
