--- a/src/app/components/whyus/whyus.component.html
+++ b/src/app/components/whyus/whyus.component.html
@@ -4,11 +4,11 @@
       <div class="row">
         <div class="col-lg-4 d-flex align-items-stretch">
           <div class="content">
-            <h3>{{'Why Choose Medilab?' | translate}}</h3>
+            <h3>{{'d' | translate}}</h3>
             <p>{{'we are dedicated to providing the highest quality care to our patients in a compassionate and welcoming environment. Our team of experienced and skilled medical professionals is committed to working closely with each patient to develop a personalized treatment plan that addresses their unique needs.' | translate}}
             </p>
             <div class="text-center">
-              <a href="#" class="more-btn"> {{'Learn More' | translate}} <i class="bi bi-chevron-right"></i></a>
+              <a href="#" class="more-btn"> {{'e' | translate}} <i class="bi bi-chevron-right"></i></a>
             </div>
           </div>
         </div>
@@ -18,22 +18,22 @@
               <div class="col-xl-4 d-flex align-items-stretch">
                 <div class="icon-box mt-4 mt-xl-0">
                   <i class="bi bi-newspaper"></i>
-                  <h4> {{'Simplify Your Healthcare Experience' | translate}} </h4>
-                  <p>{{'Book Appointments, order prescriptions, and access your medical records anytime, anywhere.' | translate}}</p>
+                  <h4> {{'f' | translate}} </h4>
+                  <p>{{'g' | translate}}</p>
                 </div>
               </div>
               <div class="col-xl-4 d-flex align-items-stretch">
                 <div class="icon-box mt-4 mt-xl-0">
                   <i class="bi bi-box"></i>
-                  <h4>{{'We use the latest technology' | translate}}</h4>
-                  <p>{{'We use the latest technology and medical advancements to ensure that you receive the highest quality care possible.' | translate}}</p>
+                  <h4>{{'h' | translate}}</h4>
+                  <p>{{'i' | translate}}</p>
                 </div>
               </div>
               <div class="col-xl-4 d-flex align-items-stretch">
                 <div class="icon-box mt-4 mt-xl-0">
                   <i class="bi bi-images"></i>
-                  <h4>{{'Perfect Quality' | translate}}</h4>
-                  <p>{{'We believe that our image is not just about appearances, but also about the level of trust and confidence our patients have in us.' | translate}} </p>
+                  <h4>{{'j' | translate}}</h4>
+                  <p>{{'k' | translate}} </p>
                 </div>
               </div>
             </div>
