--- a/src/app/components/gitstarted/gitstarted.component.html
+++ b/src/app/components/gitstarted/gitstarted.component.html
@@ -1,7 +1,7 @@
 <section id="hero" class="d-flex align-items-center">
     <div class="container">
-      <h1>{{'Welcome to Medilab' | translate}}</h1>
-      <h2> {{"We looking forward to serve you and your family's healthcare needs" | translate}}</h2>
-      <a href="#about" class="btn-get-started scrollto"> {{'Get Started' | translate}}</a>
+      <h1>{{'a' | translate}}</h1>
+      <h2> {{"b" | translate}}</h2>
+      <a href="#about" class="btn-get-started scrollto"> {{'c' | translate}}</a>
     </div>
   </section>
