--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -49,8 +49,8 @@
     </div>
 </div> -->
 
-<header id="header" class="sticky-top">
-  <div class="container d-flex align-items-center">
+<header id="header" class="sticky-top  " >
+  <div class="container d-flex align-items-center justify-content-around">
     <img
       src="../../../assets/logo/GPLogo.svg"
       routerLink="/"
@@ -73,7 +73,7 @@
 
         <li><a class="nav-link scrollto" href="#about">About</a></li>
 
-        <li><a class="nav-link scrollto" href="#doctors">Doctors</a></li>
+        <li><a class="nav-link scrollto" href="#doctors">{{"TotalDoctors" | translate}}</a></li>
         <!-- <li class="dropdown"><a href="#">Dropdown<i class="fa-solid fa-caret-down"></i></a>
                     <ul>
                         <li><a href="#">Drop Down 1</a></li>
@@ -138,7 +138,7 @@
             class="nav-link"
             routerLinkActive="active"
             routerLink="/admin/addUser"
-            >Add User</a
+            >{{'AddUser'| translate}}</a
           >
         </li>
         <li *ngIf="type == 'admin'" class="nav-item">
@@ -146,17 +146,17 @@
             class="nav-link"
             routerLinkActive="active"
             routerLink="/admin/viewUsers"
-            >view Users</a
+            >{{'ViewUsers'| translate}}</a
           >
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a
             class="nav-link"
             routerLinkActive="active"
             routerLink="/All-appointments"
             >All Appointments</a
           >
-        </li>
+        </li> -->
         <li
           *ngIf="type == 'doctor' || type == 'patient' || type == 'admin'"
           class="nav-item"
@@ -182,7 +182,7 @@
           >
         </li>
         <li *ngIf="type == 'patient'" class="nav-item">
-          <a class="nav-link" routerLinkActive="active">patient home</a>
+          <a class="nav-link" routerLinkActive="active">{{'Patienthome'| translate}}</a>
         </li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
