fix signin issue

--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -181,6 +181,7 @@
       [xAxis]="showXAxisLabel"
       [yAxis]="showYAxisLabel"
       [legend]="legend"
+      [legendTitle]="legendTitleDoctors"
       [showXAxisLabel]="showXAxisLabel"
       [showYAxisLabel]="showYAxisLabel"
       [xAxisLabel]="xAxisLabelDoctors"
