--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -362,7 +362,7 @@
         </ng-template>
       </div>
     </div>
-    <div class="row reviews-container rounded-3">
+    <div class="row w-25  reviews-container rounded-3">
       <div class="col-6 text-start">
         <p class="h5 fw-bolder mt-2">{{ "Reviews" | translate }}</p>
       </div>
