--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -46,7 +46,7 @@
             >
               <div class="row text-center">
                 <div class="col-md-12">
-                  <p class="text-muted">{{ "TotalAdmins" | translate }}</p>
+                  <p class="text-muted">Total Admins</p>
                 </div>
                 <div class="col-md-12">
                   <p class="fw-bold h4">{{ usersCount?.numberOfAdmins }}</p>
@@ -71,7 +71,7 @@
             >
               <div class="row text-center">
                 <div class="col-md-12">
-                  <p class="text-muted">{{ "TotalDoctors" | translate }}</p>
+                  <p class="text-muted">Total Doctors</p>
                 </div>
                 <div class="col-md-12">
                   <p class="fw-bold h4">{{ usersCount?.numberOfDoctors }}</p>
@@ -96,7 +96,7 @@
             >
               <div class="row text-center">
                 <div class="col-md-12">
-                  <p class="text-muted">{{ "TotalPatients" | translate }} </p>
+                  <p class="text-muted">Total Patients</p>
                 </div>
                 <div class="col-md-12">
                   <p class="fw-bold h4">{{ usersCount?.numberOfClients }}</p>
@@ -121,7 +121,7 @@
             >
               <div class="row text-center">
                 <div class="col-md-12">
-                  <p class="text-muted">{{ "TotalBookings" | translate }} </p>
+                  <p class="text-muted">Total Bookings</p>
                 </div>
                 <div class="col-md-12">
                   <p class="fw-bold h4">{{ usersCount?.numberOfBookings }}</p>
@@ -181,7 +181,6 @@
       [xAxis]="showXAxisLabel"
       [yAxis]="showYAxisLabel"
       [legend]="legend"
-      [legendTitle]="legendTitleDoctors"
       [showXAxisLabel]="showXAxisLabel"
       [showYAxisLabel]="showYAxisLabel"
       [xAxisLabel]="xAxisLabelDoctors"
@@ -191,26 +190,26 @@
     </ngx-charts-bar-horizontal>
   </div>
   <div class="my-3 rounded-3 shadow p-3">
-    <h2 class="my-2 fw-bolder p-1">{{ "DoctorRequests" | translate }} </h2>
+    <h2 class="my-2 fw-bolder p-1">Doctor Requests</h2>
     <hr />
     <div>
       <table class="table table-hover">
         <thead>
           <tr>
             <th scope="col">#</th>
-            <th scope="col">{{ "Doctor" | translate }}</th>
-            <th scope="col">{{ "role" | translate }}</th>
-            <th scope="col">{{ "specification" | translate }}</th>
-            <th scope="col">{{ "Certificate" | translate }}</th>
+            <th scope="col">Doctor</th>
+            <th scope="col">Role</th>
+            <th scope="col">Specification</th>
+            <th scope="col">Certificate</th>
           </tr>
         </thead>
         <tbody>
           <tr
-            *ngFor="let doctor of pagedItems; index as i"
+            *ngFor="let doctor of allDoctors; index as i"
             key="doctor.doctorId"
           >
             <ng-container *ngIf="doctor.status == 'pending'">
-              <th scope="row">{{ i+1 }}</th>
+              <th scope="row">{{ i }}</th>
               <td>{{ doctor.name }}</td>
               <td>{{ doctor.role }}</td>
               <td>{{ doctor.specification }}</td>
@@ -224,20 +223,19 @@
                   data-bs-toggle="modal"
                   data-bs-target="#exampleModal"
                 >
-                {{ "ViewPaper" | translate }}
-                  
+                  View Paper
                 </button>
                 <button
                   class="btn btn-outline-success"
                   (click)="updateDoctor(doctor.doctorId, 'accepted')"
                 >
-                {{ "Accept" | translate }}
+                  Accept
                 </button>
                 <button
                   class="btn btn-outline-danger"
                   (click)="updateDoctor(doctor.doctorId, 'rejected')"
                 >
-                {{ "Reject" | translate }}
+                  Reject
                 </button>
               </td>
 
@@ -284,33 +282,27 @@
           </tr>
         </tbody>
       </table>
-      <div class="pagination d-flex justify-content-center  align-items-center py-4">
-        <button class="pagination-item text-center" *ngFor="let page of length" [class.active]="currentPage === page"
-          (click)="setPage(page)">
-          {{ page }}
-        </button>
-      </div>
     </div>
   </div>
   <div class="d-flex justify-content-center align-items-center flex-wrap">
     <div class="w-75">
       <div class="col-md-12">
-        <p class="h5 fw-bolder mt-2">{{ "Appointments" | translate }}</p>
+        <p class="h5 fw-bolder mt-2">Appointments</p>
       </div>
       <div class="row justify-content-center align-items-center">
         <div class="col-md-12">
           <div class="row">
             <div class="col-md-3 col-sm-3 col-3">
-              <p class="h6 fw-bold">{{ "Patient" | translate }}</p>
+              <p class="h6 fw-bold">Patient</p>
             </div>
             <div class="col-md-2 col-sm-2 col-2">
-              <p class="h6 fw-bold">{{ "date" | translate }}</p>
+              <p class="h6 fw-bold">Date</p>
             </div>
             <div class="col-md-2 col-sm-2 col-2">
-              <p class="h6 fw-bold">{{ "Time" | translate }}</p>
+              <p class="h6 fw-bold">Time</p>
             </div>
             <div class="col-md-2 col-sm-2 col-2">
-              <p class="h6 fw-bold">{{ "Doctorname" | translate }}</p>
+              <p class="h6 fw-bold">Doctor name</p>
             </div>
             <div class="col-md-2 col-sm-2 col-2">
               <p class="h6 fw-bold">test</p>
@@ -318,15 +310,27 @@
           </div>
         </div>
         <div class="col-md-12" *ngIf="allBookings; else noBookingsPart">
-          <div class="row mb-3" *ngFor="let booking of pagedItems1; index as i">
+          <div class="row mb-3" *ngFor="let booking of allBookings; index as i">
             <div class="col-md-3 col-sm-3 col-3">
               <div class="row">
-                <div class="col-md-5 col-sm-5 col-5">
-                  <img
-                    [src]="booking.doctor.imageUrl"
-                    class="h-100 img-rounded"
-                    alt=""
-                  />
+                <div class="col-md-5 col-sm-5 col-5" style="height: 100%">
+                  <div *ngIf="booking.doctor.imageUrl; else elseBlock">
+                    <img
+                      [src]="booking.doctor.imageUrl"
+                      class="rounded-circle"
+                      alt="doctor img"
+                      style="height: 2rem"
+                    />
+                  </div>
+
+                  <ng-template #elseBlock>
+                    <img
+                      src="../../../assets/avatar/Avatar.svg"
+                      class="rounded-circle"
+                      alt="doctor img"
+                      style="height: 2rem"
+                    />
+                  </ng-template>
                 </div>
                 <div class="col-md-7 col-sm-7 col-7 d-flex align-items-center">
                   <p>
@@ -348,13 +352,6 @@
               Test
             </div>
           </div>
-
-          <div class="pagination d-flex justify-content-center  align-items-center py-4">
-            <button class="pagination-item text-center" *ngFor="let page of length1" [class.active]="currentPage1 === page"
-              (click)="setPage1(page)">
-              {{ page }}
-            </button>
-          </div>
         </div>
 
         <ng-template #noBookingsPart>
@@ -362,21 +359,33 @@
         </ng-template>
       </div>
     </div>
-    <div class="row w-25  reviews-container rounded-3">
+    <div class="row reviews-container rounded-3">
       <div class="col-6 text-start">
-        <p class="h5 fw-bolder mt-2">{{ "Reviews" | translate }}</p>
+        <p class="h5 fw-bolder mt-2">Reviews</p>
       </div>
-      <div class="col-6 ">
-        <!-- <p class="text-decoration-underline mt-2">view All</p> -->
+      <div class="col-6 text-end">
+        <p class="text-decoration-underline mt-2">view All</p>
       </div>
       <div class="col-12" *ngIf="doctorsMostRated; else noDoctorsPart">
-        <div class="row" *ngFor="let doctor of pagedItems2; index as i">
+        <div class="row" *ngFor="let doctor of doctorsMostRated; index as i">
           <div class="col-4 d-flex justify-content-end">
-            <img
-              [src]="doctor.imageUrl"
-              class="w-100 h-50 img-rounded"
-              alt=""
-            />
+            <div *ngIf="doctor.imageUrl; else elseBlock">
+              <img
+                [src]="doctor.imageUrl"
+                class="rounded-circle"
+                alt="doctor img"
+                style="height: 2rem"
+              />
+            </div>
+
+            <ng-template #elseBlock>
+              <img
+                src="../../../assets/avatar/Avatar.svg"
+                class="rounded-circle"
+                alt="doctor img"
+                style="height: 2rem"
+              />
+            </ng-template>
           </div>
           <div class="col-8 mt-2">
             <p class="h6 d-block">{{ doctor.name }}</p>
@@ -391,13 +400,6 @@
             </div>
           </ng-template> -->
         </div>
-      </div>
-      
-      <div class="pagination d-flex justify-content-center  align-items-center py-4">
-        <button class="pagination-item text-center" *ngFor="let page of length2" [class.active]="currentPage2 === page"
-          (click)="setPage2(page)">
-          {{ page }}
-        </button>
       </div>
       <ng-template #noDoctorsPart>
         <div class="col-md-12">Loading</div>
