--- a/src/app/auth/components/signup/signup.component.html
+++ b/src/app/auth/components/signup/signup.component.html
@@ -152,6 +152,9 @@
 
     </div>
   </form>
+  <div class=" d-flex justify-content-center " *ngIf="!checkLoader">
+    <mat-spinner></mat-spinner>
+  </div>
 </div>
 
 
