--- a/src/app/components/availabletimes/availabletimes.component.html
+++ b/src/app/components/availabletimes/availabletimes.component.html
@@ -1,14 +1,15 @@
 <div class="spinnerCustomStyle" *ngIf="!isLoaded">
   <mat-spinner></mat-spinner>
 </div>
-<section
+<section *ngIf="isLoaded">
+  <section
   id="doctors"
   class="doctors"
-  *ngIf="isLoaded"
+  *ngIf="checkDataisHere"
   style="background-color: rgba(255, 255, 255, 0.79)"
 >
-  <div class="row my-4 justify-content-center" *ngFor="let doc of pagedItems">
-    <div class="member card col-md-8">
+  <div class="row my-4 justify-content-center"  *ngFor="let doc of pagedItems" >
+    <div class="member card col-md-8"  >
       <div class="d-flex align-items-start justify-content-between">
         <div class="member-info" *ngIf="!doc.fullyBooked">
           <h4>{{ doc.date }}</h4>
@@ -43,4 +44,10 @@
       {{ page }}
     </button>
   </div>
+</section>
+
+<section *ngIf="!checkDataisHere" class="text-center p-5 m-5">
+  <h2 class="cH2 p-5 m-5">No Data</h2> 
+</section>
+
 </section>
