--- a/src/app/components/booking/booking.component.html
+++ b/src/app/components/booking/booking.component.html
@@ -49,7 +49,7 @@
                                    </div>
                                    
                               <button class="btn btn-danger col-10 col-md-8 mt-2" (click)="senddata()" [disabled]="!bookingForm.valid">Book</button>
-                              <button class="btn btn-light col-10 col-md-3 mt-2">Cancel</button>
+                              <button class="btn btn-light col-10 col-md-3 mt-2" (click)="goToHome()">Cancel</button>
                                 </form>
                             
                         
