--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -71,7 +71,7 @@
           >
         </li>
 
-        <li><a class="nav-link scrollto" href="#about">About</a></li>
+        <!-- <li><a class="nav-link scrollto" href="#about">About</a></li> -->
 
         <li>
           <a class="nav-link scrollto" href="#doctors">{{
