--- a/src/app/doctor/components/doctordashboard/doctordashboard.component.html
+++ b/src/app/doctor/components/doctordashboard/doctordashboard.component.html
@@ -34,31 +34,40 @@
                     </ngx-charts-linear-gauge>
                 </div>
             </div>
-            <div class="col-xl-6 cm " *ngIf="timeSlots.length">
+            <div class="col-xl-6 cm " >
                 <div class="shadow ">
 
                     <h3 class="text-light bg-primary p-1 ">{{ 'Reservations'| translate}}</h3>
 
-                    <ngx-charts-bar-vertical-2d [view]="view " [scheme]="colorScheme " [results]="timeSlots " [gradient]="gradient " [xAxis]="xAxis " [yAxis]="yAxis " [legend]="showLegend " [showXAxisLabel]="showXAxisLabel " [showYAxisLabel]="showYAxisLabel
+                    <ngx-charts-bar-vertical-2d *ngIf="timeSlots.length" [view]="view " [scheme]="colorScheme " [results]="timeSlots " [gradient]="gradient " [xAxis]="xAxis " [yAxis]="yAxis " [legend]="showLegend " [showXAxisLabel]="showXAxisLabel " [showYAxisLabel]="showYAxisLabel
                     " [xAxisLabel]="xAxisLabel " yAxisLabel="Reservations " [legendTitle]="legendTitle " (select)="onSelect($event) " (activate)="onActivate($event) " (deactivate)="onDeactivate($event) ">
                     </ngx-charts-bar-vertical-2d>
+                    <div class="text-center p-5" *ngIf="!timeSlots.length">
+                        <h2  class="cH2">{{"NoData" | translate}}</h2>
+                    </div>
                 </div>
             </div>
-            <div class="col-xl-6 cmm " *ngIf="patientGenders.length">
+            <div class="col-xl-6 cmm " >
                 <div class="shadow ">
                     <h3 class="text-light bg-primary p-1 ">{{ 'AvgVisitsbyGender'| translate}}</h3>
-                    <ngx-charts-pie-chart [view]="view" [scheme]="colorScheme" [results]="patientGenders" [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels" [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
+                    <ngx-charts-pie-chart *ngIf="patientGenders.length" [view]="view" [scheme]="colorScheme" [results]="patientGenders" [gradient]="gradient" [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels" [doughnut]="isDoughnut" (select)="onSelect($event)" (activate)="onActivate($event)"
                         (deactivate)="onDeactivate($event)">
                     </ngx-charts-pie-chart>
+                    <div class="text-center p-5" *ngIf="!patientGenders.length">
+                        <h2  class="cH2">{{"NoData" | translate}}</h2>
+                    </div>
                 </div>
             </div>
 
-            <div class="col-xl-6 cmm" *ngIf="doctorIncomes.length">
+            <div class="col-xl-6 cmm">
                 <div class="shadow">
                     <h3 class="text-light bg-primary p-1"> {{ 'Incomes'| translate}}</h3>
-                    <ngx-charts-bar-vertical [view]="view" [scheme]="colorScheme" [results]="doctorIncomes" [gradient]=" gradient " [xAxis]="xAxis " [yAxis]="yAxis " [legend]="showLegend " [showXAxisLabel]="showXAxisLabel " [showYAxisLabel]="showYAxisLabel " [xAxisLabel]="xAxisLabel "
+                    <ngx-charts-bar-vertical  *ngIf="doctorIncomes.length" [view]="view" [scheme]="colorScheme" [results]="doctorIncomes" [gradient]=" gradient " [xAxis]="xAxis " [yAxis]="yAxis " [legend]="showLegend " [showXAxisLabel]="showXAxisLabel " [showYAxisLabel]="showYAxisLabel " [xAxisLabel]="xAxisLabel "
                         [yAxisLabel]="yAxisLabel " (select)="onSelect($event) ">
                     </ngx-charts-bar-vertical>
+                    <div class="text-center p-5" *ngIf="!doctorIncomes.length">
+                        <h2  class="cH2">{{"NoData" | translate}}</h2>
+                    </div>
                 </div>
             </div>
 
